--- a/main.tex
+++ b/main.tex
@@ -123,11 +123,11 @@
 % \end{tabular*}
 
 \begin{center}
-    {\Huge \scshape First Last} \\ \vspace{1pt}
-    123 Street Name, Town, State 12345 \\ \vspace{1pt}
-    \small \raisebox{-0.1\height}\faPhone\ 123-456-7890 ~ \href{mailto:x@gmail.com}{\raisebox{-0.2\height}\faEnvelope\  \underline{email@gmail.com}} ~ 
+    {\Huge \scshape Kangheng Liu} \\ \vspace{1pt}
+    1808 N Quinn St, Arlington, State 22209 \\ \vspace{1pt}
+    \small \raisebox{-0.1\height}\faPhone\ 202-725-1513 ~ \href{mailto:kl1099@georgetown.edu}{\raisebox{-0.2\height}\faEnvelope\  \underline{kl1099@georgetown.edu}} ~ 
     \href{https://linkedin.com/in//}{\raisebox{-0.2\height}\faLinkedin\ \underline{linkedin.com/in/username}}  ~
-    \href{https://github.com/}{\raisebox{-0.2\height}\faGithub\ \underline{github.com/username}}
+    \href{https://github.com/kanghengliu}{\raisebox{-0.2\height}\faGithub\ \underline{github.com/kanghengliu}}
     \vspace{-8pt}
 \end{center}
 
@@ -136,26 +136,29 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {State University}{Sep. 2017 -- May 2021}
-      {Bachelor of Science in Computer Science}{City, State}
+      {Georgetown University}{Sep. 2023 --}
+      {Master of Science in Data Science and Analytics}{Washinton D.C.}
+    \resumeSubheading
+      {Lanzhou University}{Sep. 2019 -- Jun. 2023}
+      {Bachelor of Science in Data Science}{Lanzhou, China}
   \resumeSubHeadingListEnd
 
 %------RELEVANT COURSEWORK-------
-\section{Relevant Coursework}
-    %\resumeSubHeadingListStart
-        \begin{multicols}{4}
-            \begin{itemize}[itemsep=-5pt, parsep=3pt]
-                \item\small Data Structures
-                \item Software Methodology
-                \item Algorithms Analysis
-                \item Database Management
-                \item Artificial Intelligence
-                \item Internet Technology
-                \item Systems Programming
-                \item Computer Architecture
-            \end{itemize}
-        \end{multicols}
-        \vspace*{2.0\multicolsep}
+% \section{Relevant Coursework}
+%     %\resumeSubHeadingListStart
+%         \begin{multicols}{3}
+%             \begin{itemize}[itemsep=-5pt, parsep=3pt]
+%                 \item\small Data Structures
+%                 \item Data Mining and Analytics
+%                 \item Big Data and Cloud Computing
+%                 \item Database Management
+%                 \item Machine Learning
+%                 \item Deep Learning and Neural Networks
+%                 \item Computer System Architecture and Principles
+%                 \item 
+%             \end{itemize}
+%         \end{multicols}
+%         \vspace*{2.0\multicolsep}
     %\resumeSubHeadingListEnd
 
 
@@ -164,23 +167,35 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Electronics Company}{May 2020 -- August 2020}
-      {Software Engineer Intern}{City, State}
+      {Huawei Inc. \& Lanzhou University}{Jul. 2021 -- Aug. 2021}
+      {Teaching Assistant in Summer Class}{Lanzhou, China}
       \resumeItemListStart
-        \resumeItem{Developed a service to automatically perform a set of unit tests daily on a product in development in order to decrease time needed for team members to identify and fix bugs/issues.}
-        \resumeItem{Incorporated scripts using Python and PowerShell to aggregate XML test results into an organized format and to load the latest build code onto the hardware, so that daily testing can be performed.}
-        \resumeItem{Utilized Jenkins to provide a continuous integration service in order to automate the entire process of loading the latest build code and test files, running the tests, and generating a report of the results once per day.}
-        \resumeItem{Explored ways to visualize and send a daily report of test results to team members  using HTML, Javascript, and CSS.}
+        \resumeItem{Worked on extensive Linux Data Mining deployment with OpenEuler\textsuperscript{\tiny\textregistered} operating system. Assisted the teachers and students to debug the experiments;}
+        \resumeItem{Learned about the possible innovation points of the current software solutions of data science, e.g. independent
+        optimization of the OpenGauss relational database system on the ARM instruction architecture, adoption of the automatic
+        differentiation technology on mindspore, code transformation methods, etc}
+        % \resumeItem{Utilized Jenkins to provide a continuous integration service in order to automate the entire process of loading the latest build code and test files, running the tests, and generating a report of the results once per day.}
+        % \resumeItem{Explored ways to visualize and send a daily report of test results to team members  using HTML, Javascript, and CSS.}
       \resumeItemListEnd
 
     \resumeSubheading
-      {Startup, Inc}{May 2019 -- August 2019}
-      {Front End Developer Intern}{City, State}
+      {Summer Practicum, School of Information Science and Engineering, Lanzhou University}{Jul. 2021}
+      {Teaching Assistant}{Lanzhou, China}
       \resumeItemListStart
-        \resumeItem{Assisted in development of the front end of a mobile application for iOS/Android using Dart and the Flutter framework.}
-        \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
-        \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
-        \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
+        \resumeItem{Assisted in experimenting and testing of Distributed Relational Database System GaussDB\textsuperscript{\tiny\textregistered}.}
+        % \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
+        % \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
+        % \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
+    \resumeItemListEnd
+
+    \resumeSubheading
+      {School of Data Science and Analytics, Georgetown University}{Sept. 2023}
+      {Teaching Assistant}{Washinton D.C., United States of America}
+      \resumeItemListStart
+        \resumeItem{Assisted in Neural Network and Deep Learning curriculum.}
+        % \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
+        % \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
+        % \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
     \resumeItemListEnd
     
   \resumeSubHeadingListEnd
@@ -191,28 +206,35 @@
     \vspace{-5pt}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Gym Reservation Bot} $|$ \emph{Python, Selenium, Google Cloud Console}}{January 2021}
+          {\textbf{Intelligent Campus Oriented Emotion Recognition and Depression Assistance System} $|$ \\ \emph{Python, SQL, NLP}}{Mar. 2022 - Nov. 2022}
+          % \resumeSubSubheading{This project is collaboratively operated by Lanzhou University with the School of Medicine, Lanzhou University. It combined emotion recognition analysis and big data analysis, and provided a platform for the emotional sub-health groups to
+          % communicate, assess their emotional health status and share through APP, BBS and some other applets. Moreover, it supplied
+          % health advices and services of early warning for sub-health.}{}
+          
           \resumeItemListStart
-            \resumeItem{Developed an automatic bot using Python and Google Cloud Console to register myself for a timeslot at my school gym.}
-            \resumeItem{Implemented Selenium to create an instance of Chrome in order to interact with the correct elements of the web page.}
-            \resumeItem{Created a Linux virtual machine to run on Google Cloud so that the program is able to run everyday from the cloud.}
-            \resumeItem{Used Cron to schedule the program to execute automatically at 11 AM every morning so a reservation is made for me.}
+            \resumeItem{Worked on data collection (information collection, text semantic analysis and classification) as well as pipelining to the back end of the application.}
+            \resumeItem{Written handler on MySQL database with SQLalchemy extension library.}
+            \resumeItem{Performed semantic analysis with Natural Language Processing.}
+            % \resumeItem{Implemented Selenium to create an instance of Chrome in order to interact with the correct elements of the web page.}
+            % \resumeItem{Created a Linux virtual machine to run on Google Cloud so that the program is able to run everyday from the cloud.}
+            % \resumeItem{Used Cron to schedule the program to execute automatically at 11 AM every morning so a reservation is made for me.}
           \resumeItemListEnd
           \vspace{-13pt}
       \resumeProjectHeading
-          {\textbf{Ticket Price Calculator App} $|$ \emph{Java, Android Studio}}{November 2020}
+          {\textbf{Design and Implementation of Telemedicine System} $|$ \\ \emph{Software Development Cycle Management, Data flow design, Database Architecture design}}{Mar. 2021}
           \resumeItemListStart
-            \resumeItem{Created an Android application using Java and Android Studio to calculate ticket prices for trips to museums in NYC.}
-            \resumeItem{Processed user inputted information in the back-end of the app to return a subtotal price based on the tickets selected.}
-            \resumeItem{Utilized the layout editor to create a UI for the application in order to allow different scenes to interact with each other.}
+            \resumeItem{Analyzes the preconditions of the
+            research background domestic and foreign development status.}
+            \resumeItem{Put forward overall system architecutre of implementation of telemedicine system.}
+            % \resumeItem{Utilized the layout editor to create a UI for the application in order to allow different scenes to interact with each other.}
           \resumeItemListEnd 
           \vspace{-13pt}
           \resumeProjectHeading
-          {\textbf{Transaction Management GUI} $|$ \emph{Java, Eclipse, JavaFX}}{October 2020}
+          {\textbf{Novel File Management System: Stardust} $|$ \emph{C, Python, Unity3D}}{Sept 2019}
           \resumeItemListStart
-            \resumeItem{Designed a sample banking transaction system using Java to simulate the common functions of using a bank account.}
-            \resumeItem{Used JavaFX to create a GUI that supports actions such as creating an account, deposit, withdraw, list all acounts, etc.}
-            \resumeItem{Implemented object-oriented programming practices such as inheritance to create different account types and databases.}
+            \resumeItem{Designed a classification/recommendation system for accessing recent files  }
+            \resumeItem{Implemented python GUI interface for file manager with PyQt}
+            % \resumeItem{Implemented object-oriented programming practices such as inheritance to create different account types and databases.}
           \resumeItemListEnd 
     \resumeSubHeadingListEnd
 \vspace{-15pt}
@@ -223,25 +245,25 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Python, Java, C, HTML/CSS, JavaScript, SQL} \\
-     \textbf{Developer Tools}{: VS Code, Eclipse, Google Cloud Platform, Android Studio} \\
-     \textbf{Technologies/Frameworks}{: Linux, Jenkins, GitHub, JUnit, WordPress} \\
+     \textbf{Languages}{: Python, R, HTML/CSS, C, SQL} \\
+     \textbf{Developer Tools}{: VS Code, Huawei Cloud Platform, Xcode} \\
+     \textbf{Technologies/Frameworks}{: Linux, GitHub, Gitee, Quarto, \LaTeX, macOS Kernel Extension} \\
     }}
  \end{itemize}
  \vspace{-16pt}
 
 
 %-----------INVOLVEMENT---------------
-\section{Leadership / Extracurricular}
-    \resumeSubHeadingListStart
-        \resumeSubheading{Fraternity}{Spring 2020 -- Present}{President}{University Name}
-            \resumeItemListStart
-                \resumeItem{Achieved a 4 star fraternity ranking by the Office of Fraternity and Sorority Affairs (highest possible ranking).}
-                \resumeItem{Managed executive board of 5 members and ran weekly meetings to oversee progress in essential parts of the chapter.}
-                \resumeItem{Led chapter of 30+ members to work towards goals that improve and promote community service, academics, and unity.}
-            \resumeItemListEnd
+% \section{Leadership / Extracurricular}
+%     \resumeSubHeadingListStart
+%         \resumeSubheading{Fraternity}{Spring 2020 -- Present}{President}{University Name}
+%             \resumeItemListStart
+%                 \resumeItem{Achieved a 4 star fraternity ranking by the Office of Fraternity and Sorority Affairs (highest possible ranking).}
+%                 \resumeItem{Managed executive board of 5 members and ran weekly meetings to oversee progress in essential parts of the chapter.}
+%                 \resumeItem{Led chapter of 30+ members to work towards goals that improve and promote community service, academics, and unity.}
+%             \resumeItemListEnd
         
-    \resumeSubHeadingListEnd
+    % \resumeSubHeadingListEnd
 
 
 \end{document}
