feat: added content

--- a/main.tex
+++ b/main.tex
@@ -126,7 +126,7 @@
     {\Huge \scshape Kangheng Liu} \\ \vspace{1pt}
     1808 N Quinn St, Arlington, State 22209 \\ \vspace{1pt}
     \small \raisebox{-0.1\height}\faPhone\ 202-725-1513 ~ \href{mailto:kl1099@georgetown.edu}{\raisebox{-0.2\height}\faEnvelope\  \underline{kl1099@georgetown.edu}} ~ 
-    \href{https://linkedin.com/in//}{\raisebox{-0.2\height}\faLinkedin\ \underline{linkedin.com/in/username}}  ~
+    \href{https://www.linkedin.com/in/kangheng-liu-7a5754295/}{\raisebox{-0.2\height}\faLinkedin\ \underline{linkedin.com/in/kangheng-liu}}  ~
     \href{https://github.com/kanghengliu}{\raisebox{-0.2\height}\faGithub\ \underline{github.com/kanghengliu}}
     \vspace{-8pt}
 \end{center}
@@ -136,8 +136,8 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Georgetown University}{Sep. 2023 --}
-      {Master of Science in Data Science and Analytics}{Washinton D.C.}
+      {Georgetown University}{Sep. 2023 -- May. 2024}
+      {Master of Science in Data Science and Analytics}{Washinton D.C., USA}
     \resumeSubheading
       {Lanzhou University}{Sep. 2019 -- Jun. 2023}
       {Bachelor of Science in Data Science}{Lanzhou, China}
@@ -167,52 +167,63 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Huawei Inc. \& Lanzhou University}{Jul. 2021 -- Aug. 2021}
-      {Teaching Assistant in Summer Class}{Lanzhou, China}
+      {School of Data Science and Analytics, Georgetown University}{Sept. 2023 -- Current}
+      {Teaching Assistant}{Washington D.C., USA}
       \resumeItemListStart
-        \resumeItem{Worked on extensive Linux Data Mining deployment with OpenEuler\textsuperscript{\tiny\textregistered} operating system. Assisted the teachers and students to debug the experiments;}
-        \resumeItem{Learned about the possible innovation points of the current software solutions of data science, e.g. independent
-        optimization of the OpenGauss relational database system on the ARM instruction architecture, adoption of the automatic
-        differentiation technology on mindspore, code transformation methods, etc}
-        % \resumeItem{Utilized Jenkins to provide a continuous integration service in order to automate the entire process of loading the latest build code and test files, running the tests, and generating a report of the results once per day.}
-        % \resumeItem{Explored ways to visualize and send a daily report of test results to team members  using HTML, Javascript, and CSS.}
-      \resumeItemListEnd
-
-    \resumeSubheading
-      {Summer Practicum, School of Information Science and Engineering, Lanzhou University}{Jul. 2021}
-      {Teaching Assistant}{Lanzhou, China}
-      \resumeItemListStart
-        \resumeItem{Assisted in experimenting and testing of Distributed Relational Database System GaussDB\textsuperscript{\tiny\textregistered}.}
-        % \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
-        % \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
-        % \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
-    \resumeItemListEnd
-
-    \resumeSubheading
-      {School of Data Science and Analytics, Georgetown University}{Sept. 2023}
-      {Teaching Assistant}{Washinton D.C., United States of America}
-      \resumeItemListStart
-        \resumeItem{Assisted in Neural Network and Deep Learning curriculum.}
+        \resumeItem{Advised and mentored students in Neural Network and Deep Learning curriculum.}
         % \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
         % \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
         % \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
     \resumeItemListEnd
     
-  \resumeSubHeadingListEnd
-\vspace{-16pt}
-
-%-----------PROJECTS-----------
-\section{Projects}
+    
+    \resumeSubheading
+    {School of Information Science and Engineering, Lanzhou University}{Jul. 2022 -- May. 2023}
+    {System Architect}{Lanzhou, China}
+    \resumeItemListStart
+    \resumeItem{Set up and optimized Kuberntetes clustering containerized applications management system with Ceph distributed storage for university net-based services, hosted various Lanzhou University web portals. Significantly reduced cost for hosting hardware and system maintanance while improving performance for scaling up applications and data trafficking.}
+    % \resumeItem{Deployed Distributed Relational Database System GaussDB\textsuperscript{\tiny\textregistered}.}
+    % \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
+    % \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
+    % \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
+    \resumeItemListEnd
+    % \resumeSubheading
+    % {Summer Practicum, School of Information Science and Engineering, Lanzhou University}{Jul. 2021}
+    % {Teaching Assistant}{Lanzhou, China}
+    % \resumeItemListStart
+    % \resumeItem{Deployed Distributed Relational Database System GaussDB\textsuperscript{\tiny\textregistered}.}
+    % % \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
+    % % \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
+    % % \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
+    % \resumeItemListEnd
+    \resumeSubheading
+      {Huawei Inc. \& Lanzhou University}{Jul. 2021 -- Aug. 2021}
+      {Teaching Assistant}{Lanzhou, China}
+      \resumeItemListStart
+        \resumeItem{Deployed extensive Linux based Data Mining development environment with OpenEuler\textsuperscript{\tiny\textregistered} operating system.}
+        \resumeItem{Researched and optimized OpenGauss\textsuperscript{\tiny\textregistered} relational database system by Huawei Technologies Co., Ltd regarding the ARM instruction set CPU architecture.} 
+        \resumeItem{Adopted Mindspore\textsuperscript{\tiny\textregistered} by Huawei Technologies Co., Ltd automatic differentiation technique, code transformation techniques for deep learning. }
+        \resumeItem{Set up OpenEuler\textsuperscript{\tiny\textregistered} by Huawei Techonologies Co., Ltd operating system for server and cloud environments, introduced its superiority for automatic performance tuning. }
+        % \resumeItem{Utilized Jenkins to provide a continuous integration service in order to automate the entire process of loading the latest build code and test files, running the tests, and generating a report of the results once per day.}
+        % \resumeItem{Explored ways to visualize and send a daily report of test results to team members  using HTML, Javascript, and CSS.}
+      \resumeItemListEnd
+    
+    
+    \resumeSubHeadingListEnd
+    \vspace{-16pt}
+    
+    %-----------PROJECTS-----------
+    \section{Projects}
     \vspace{-5pt}
     \resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{Intelligent Campus Oriented Emotion Recognition and Depression Assistance System} $|$ \\ \emph{Python, SQL, NLP}}{Mar. 2022 - Nov. 2022}
-          % \resumeSubSubheading{This project is collaboratively operated by Lanzhou University with the School of Medicine, Lanzhou University. It combined emotion recognition analysis and big data analysis, and provided a platform for the emotional sub-health groups to
-          % communicate, assess their emotional health status and share through APP, BBS and some other applets. Moreover, it supplied
-          % health advices and services of early warning for sub-health.}{}
-          
+    \resumeProjectHeading
+    {\textbf{Intelligent Campus Oriented Emotion Recognition and Depression Assistance System} $|$ \\ \emph{Python, SQL, NLP}}{Mar. 2022 -- Nov. 2022}
+    % \resumeSubSubheading{This project is collaboratively operated by Lanzhou University with the School of Medicine, Lanzhou University. It combined emotion recognition analysis and big data analysis, and provided a platform for the emotional sub-health groups to
+    % communicate, assess their emotional health status and share through APP, BBS and some other applets. Moreover, it supplied
+    % health advices and services of early warning for sub-health.}{}
+    
           \resumeItemListStart
-            \resumeItem{Worked on data collection (information collection, text semantic analysis and classification) as well as pipelining to the back end of the application.}
+            \resumeItem{Gathered data (information collection, text semantic analysis and classification), cleaned and pipelined to application backend database.}
             \resumeItem{Written handler on MySQL database with SQLalchemy extension library.}
             \resumeItem{Performed semantic analysis with Natural Language Processing.}
             % \resumeItem{Implemented Selenium to create an instance of Chrome in order to interact with the correct elements of the web page.}
@@ -230,10 +241,19 @@
           \resumeItemListEnd 
           \vspace{-13pt}
           \resumeProjectHeading
-          {\textbf{Novel File Management System: Stardust} $|$ \emph{C, Python, Unity3D}}{Sept 2019}
+          {\textbf{Another File Management System: Stardust} $|$ \emph{C, Python, Unity3D}}{Sept 2019}
           \resumeItemListStart
-            \resumeItem{Designed a classification/recommendation system for accessing recent files  }
-            \resumeItem{Implemented python GUI interface for file manager with PyQt}
+            \resumeItem{Designed a classification/recommendation system for accessing recent files.}
+            \resumeItem{Implemented python GUI interface for file manager with PyQt.}
+            % \resumeItem{Implemented object-oriented programming practices such as inheritance to create different account types and databases.}
+          \resumeItemListEnd 
+          \vspace{-13pt}
+          \resumeProjectHeading
+          {\textbf{macOS Installation on Non-supported Hardware} $|$ \emph{C++, bash, ACPI, AppleScript}}{Sept 2019 -- Dec 2022}
+          \resumeItemListStart
+            \resumeItem{Installed macOS on spoofed non-supported HP laptop, written Kernel patches for motherboard ACPI table. }
+            \resumeItem{Contributed to VoodooSMBus/VoodooRMI driver repo on github for better touchpad functionality. }
+            \resumeItem{Written ACPI patches for optimizing hardware performance, extending battery life by 40\% while maintaining same CPU performance.}
             % \resumeItem{Implemented object-oriented programming practices such as inheritance to create different account types and databases.}
           \resumeItemListEnd 
     \resumeSubHeadingListEnd
@@ -245,7 +265,7 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Python, R, HTML/CSS, C, SQL} \\
+     \textbf{Languages}{: Python, R, HTML/CSS, C, SQL, C++, ACPI Source Language} \\
      \textbf{Developer Tools}{: VS Code, Huawei Cloud Platform, Xcode} \\
      \textbf{Technologies/Frameworks}{: Linux, GitHub, Gitee, Quarto, \LaTeX, macOS Kernel Extension} \\
     }}
