--- a/main.tex
+++ b/main.tex
@@ -170,7 +170,7 @@
       {School of Data Science and Analytics, Georgetown University}{Sept. 2023 -- Current}
       {Teaching Assistant}{Washington D.C., USA}
       \resumeItemListStart
-        \resumeItem{Advised and mentored students in Neural Network and Deep Learning curriculum.}
+        \resumeItem{Instructed and mentored 50 students in Neural Network and Deep Learning curriculum.}
         % \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
         % \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
         % \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
@@ -181,7 +181,7 @@
     {School of Information Science and Engineering, Lanzhou University}{Jul. 2022 -- May. 2023}
     {System Architect}{Lanzhou, China}
     \resumeItemListStart
-    \resumeItem{Set up and optimized Kuberntetes clustering containerized applications management system with Ceph distributed storage for university net-based services, hosted various Lanzhou University web portals. Significantly reduced cost for hosting hardware and system maintanance while improving performance for scaling up applications and data trafficking.}
+    \resumeItem{Set up and optimized data commnuication by 10\% with Kubernetes clustering containerized applications management system with Ceph distributed storage for university net-based services, hosted various Lanzhou University web portals. Significantly reduced cost ($\sim 20\%$) for hosting hardware and system maintanance while improving performance for scaling up applications and data trafficking.}
     % \resumeItem{Deployed Distributed Relational Database System GaussDB\textsuperscript{\tiny\textregistered}.}
     % \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
     % \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
@@ -203,7 +203,7 @@
         \resumeItem{Deployed extensive Linux based Data Mining development environment with OpenEuler\textsuperscript{\tiny\textregistered} operating system.}
         \resumeItem{Researched and optimized OpenGauss\textsuperscript{\tiny\textregistered} relational database system by Huawei Technologies Co., Ltd regarding the ARM instruction set CPU architecture.} 
         \resumeItem{Adopted Mindspore\textsuperscript{\tiny\textregistered} by Huawei Technologies Co., Ltd automatic differentiation technique, code transformation techniques for deep learning. }
-        \resumeItem{Set up OpenEuler\textsuperscript{\tiny\textregistered} by Huawei Techonologies Co., Ltd operating system for server and cloud environments, introduced its superiority for automatic performance tuning. }
+        \resumeItem{Implemented OpenEuler\textsuperscript{\tiny\textregistered} by Huawei Technologies Co., Ltd operating system for server and cloud environments, introduced its superiority for automatic performance tuning. }
         % \resumeItem{Utilized Jenkins to provide a continuous integration service in order to automate the entire process of loading the latest build code and test files, running the tests, and generating a report of the results once per day.}
         % \resumeItem{Explored ways to visualize and send a daily report of test results to team members  using HTML, Javascript, and CSS.}
       \resumeItemListEnd
@@ -217,14 +217,13 @@
     \vspace{-5pt}
     \resumeSubHeadingListStart
     \resumeProjectHeading
-    {\textbf{Intelligent Campus Oriented Emotion Recognition and Depression Assistance System} $|$ \\ \emph{Python, SQL, NLP}}{Mar. 2022 -- Nov. 2022}
+    {\textbf{Intelligent Campus Oriented Emotion Recognition $\&$ Depression Assistance System} $|$  \\ \emph{Python, SQL, NLP}}{Mar. 2022 -- Nov. 2022}
     % \resumeSubSubheading{This project is collaboratively operated by Lanzhou University with the School of Medicine, Lanzhou University. It combined emotion recognition analysis and big data analysis, and provided a platform for the emotional sub-health groups to
     % communicate, assess their emotional health status and share through APP, BBS and some other applets. Moreover, it supplied
     % health advices and services of early warning for sub-health.}{}
-    
           \resumeItemListStart
-            \resumeItem{Gathered data (information collection, text semantic analysis and classification), cleaned and pipelined to application backend database.}
-            \resumeItem{Written handler on MySQL database with SQLalchemy extension library.}
+            \resumeItem{Gathered data (information collection, text semantic analysis and classification), cleaned, and pipelined to application back-end database.}
+            \resumeItem{Wrote handler on MySQL database with SQLalchemy extension library.}
             \resumeItem{Performed semantic analysis with Natural Language Processing.}
             % \resumeItem{Implemented Selenium to create an instance of Chrome in order to interact with the correct elements of the web page.}
             % \resumeItem{Created a Linux virtual machine to run on Google Cloud so that the program is able to run everyday from the cloud.}
@@ -234,13 +233,12 @@
       \resumeProjectHeading
           {\textbf{Design and Implementation of Telemedicine System} $|$ \\ \emph{Software Development Cycle Management, Data flow design, Database Architecture design}}{Mar. 2021}
           \resumeItemListStart
-            \resumeItem{Analyzes the preconditions of the
-            research background domestic and foreign development status.}
-            \resumeItem{Put forward overall system architecutre of implementation of telemedicine system.}
+            \resumeItem{Evaluated the domestic and international developmental context as a precursor to the research background analysis.}
+            \resumeItem{Designed the architectural framework for implementing a telemedicine system.}
             % \resumeItem{Utilized the layout editor to create a UI for the application in order to allow different scenes to interact with each other.}
           \resumeItemListEnd 
           \vspace{-13pt}
-          \resumeProjectHeading
+      \resumeProjectHeading
           {\textbf{Another File Management System: Stardust} $|$ \emph{C, Python, Unity3D}}{Sept 2019}
           \resumeItemListStart
             \resumeItem{Designed a classification/recommendation system for accessing recent files.}
@@ -248,12 +246,12 @@
             % \resumeItem{Implemented object-oriented programming practices such as inheritance to create different account types and databases.}
           \resumeItemListEnd 
           \vspace{-13pt}
-          \resumeProjectHeading
-          {\textbf{macOS Installation on Non-supported Hardware} $|$ \emph{C++, bash, ACPI, AppleScript}}{Sept 2019 -- Dec 2022}
+      \resumeProjectHeading
+          {\textbf{macOS OpenCore Installation on Non-supported Hardware} $|$ \\ \emph{C++, bash, ACPI, AppleScript}}{Sept 2019 -- Dec 2022}
           \resumeItemListStart
             \resumeItem{Installed macOS on spoofed non-supported HP laptop, written Kernel patches for motherboard ACPI table. }
-            \resumeItem{Contributed to VoodooSMBus/VoodooRMI driver repo on github for better touchpad functionality. }
-            \resumeItem{Written ACPI patches for optimizing hardware performance, extending battery life by 40\% while maintaining same CPU performance.}
+            \resumeItem{Improved touchpad functionality within the VoodooSMBus/VoodooRMI driver repository on GitHub, elevating its performance. }
+            \resumeItem{Wrote ACPI patches for optimizing hardware performance, extending battery life by 40\% while maintaining same CPU performance.}
             % \resumeItem{Implemented object-oriented programming practices such as inheritance to create different account types and databases.}
           \resumeItemListEnd 
     \resumeSubHeadingListEnd
