chore: update time

--- a/main.tex
+++ b/main.tex
@@ -136,7 +136,7 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Georgetown University}{Sep. 2023 -- May. 2024}
+      {Georgetown University}{Sep. 2023 -- May. 2025}
       {Master of Science in Data Science and Analytics}{Washinton D.C., USA}
     \resumeSubheading
       {Lanzhou University}{Sep. 2019 -- Jun. 2023}
@@ -167,7 +167,7 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {School of Data Science and Analytics, Georgetown University}{Sept. 2023 -- Current}
+      {School of Data Science and Analytics, Georgetown University}{Sept. 2023 -- Jan. 2024}
       {Teaching Assistant}{Washington D.C., USA}
       \resumeItemListStart
         \resumeItem{Instructed and mentored 50 students in Neural Network and Deep Learning curriculum.}
