feat: misc updates

--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,6 @@
 % Based off of: https://github.com/sb2nov/resume
 % License : MIT
 %------------------------
-
 \documentclass[letterpaper,11pt]{article}
 
 \usepackage{latexsym}
@@ -124,8 +123,8 @@
 
 \begin{center}
     {\Huge \scshape Kangheng Liu} \\ \vspace{1pt}
-    1808 N Quinn St, Arlington, State 22209 \\ \vspace{1pt}
-    \small \raisebox{-0.1\height}\faPhone\ 202-725-1513 ~ \href{mailto:kl1099@georgetown.edu}{\raisebox{-0.2\height}\faEnvelope\  \underline{kl1099@georgetown.edu}} ~ 
+    1111 Arlington Blvd, Arlington, VA 22209 \\ \vspace{1pt}
+    \small \raisebox{-0.1\height}\faPhone\ 202-725-1513 ~ \href{mailto:kl1099@georgetown.edu}{\raisebox{-0.2\height}\faEnvelope\  \underline{kl1099@georgetown.edu}} ~
     \href{https://www.linkedin.com/in/kangheng-liu-7a5754295/}{\raisebox{-0.2\height}\faLinkedin\ \underline{linkedin.com/in/kangheng-liu}}  ~
     \href{https://github.com/kanghengliu}{\raisebox{-0.2\height}\faGithub\ \underline{github.com/kanghengliu}}
     \vspace{-8pt}
@@ -155,7 +154,7 @@
 %                 \item Machine Learning
 %                 \item Deep Learning and Neural Networks
 %                 \item Computer System Architecture and Principles
-%                 \item 
+%                 \item
 %             \end{itemize}
 %         \end{multicols}
 %         \vspace*{2.0\multicolsep}
@@ -167,16 +166,26 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {School of Data Science and Analytics, Georgetown University}{Sept. 2023 -- Jan. 2024}
+    {Massive Data Institute, Georgetown University}{Jul. 2024 -- Current}
+    {Research Scholar}{Washington D.C., USA}
+      \resumeItemListStart
+        \resumeItem{Implemented R and Python data extraction, computation and tabulation modules for Secure Query System - a security-focused tax data handler in collaboration with IRS SOI.}
+      % \resumeItem{Deployed Distributed Relational Database System GaussDB\textsuperscript{\tiny\textregistered}.}
+      % \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
+      % \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
+      % \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
+      \resumeItemListEnd
+    \resumeSubheading
+      {School of Data Science and Analytics, Georgetown University}{Sept. 2023 -- Jun. 2024}
       {Teaching Assistant}{Washington D.C., USA}
       \resumeItemListStart
-        \resumeItem{Instructed and mentored 50 students in Neural Network and Deep Learning curriculum.}
+        \resumeItem{Instructed and mentored 50 students in Neural Network and Deep Learning curriculum and Data Science BootCamp.}
         % \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
         % \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
         % \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
     \resumeItemListEnd
-    
-    
+
+
     \resumeSubheading
     {School of Information Science and Engineering, Lanzhou University}{Jul. 2022 -- May. 2023}
     {System Architect}{Lanzhou, China}
@@ -201,17 +210,12 @@
       {Teaching Assistant}{Lanzhou, China}
       \resumeItemListStart
         \resumeItem{Deployed extensive Linux based Data Mining development environment with OpenEuler\textsuperscript{\tiny\textregistered} operating system.}
-        \resumeItem{Researched and optimized OpenGauss\textsuperscript{\tiny\textregistered} relational database system by Huawei Technologies Co., Ltd regarding the ARM instruction set CPU architecture.} 
+        \resumeItem{Tested OpenGauss\textsuperscript{\tiny\textregistered} relational database system by Huawei Technologies Co., Ltd based on ARM CPU architecture.}
         \resumeItem{Adopted Mindspore\textsuperscript{\tiny\textregistered} by Huawei Technologies Co., Ltd automatic differentiation technique, code transformation techniques for deep learning. }
-        \resumeItem{Implemented OpenEuler\textsuperscript{\tiny\textregistered} by Huawei Technologies Co., Ltd operating system for server and cloud environments, introduced its superiority for automatic performance tuning. }
-        % \resumeItem{Utilized Jenkins to provide a continuous integration service in order to automate the entire process of loading the latest build code and test files, running the tests, and generating a report of the results once per day.}
-        % \resumeItem{Explored ways to visualize and send a daily report of test results to team members  using HTML, Javascript, and CSS.}
       \resumeItemListEnd
-    
-    
     \resumeSubHeadingListEnd
     \vspace{-16pt}
-    
+
     %-----------PROJECTS-----------
     \section{Projects}
     \vspace{-5pt}
@@ -236,7 +240,7 @@
             \resumeItem{Evaluated the domestic and international developmental context as a precursor to the research background analysis.}
             \resumeItem{Designed the architectural framework for implementing a telemedicine system.}
             % \resumeItem{Utilized the layout editor to create a UI for the application in order to allow different scenes to interact with each other.}
-          \resumeItemListEnd 
+          \resumeItemListEnd
           \vspace{-13pt}
       \resumeProjectHeading
           {\textbf{Another File Management System: Stardust} $|$ \emph{C, Python, Unity3D}}{Sept 2019}
@@ -244,7 +248,7 @@
             \resumeItem{Designed a classification/recommendation system for accessing recent files.}
             \resumeItem{Implemented python GUI interface for file manager with PyQt.}
             % \resumeItem{Implemented object-oriented programming practices such as inheritance to create different account types and databases.}
-          \resumeItemListEnd 
+          \resumeItemListEnd
           \vspace{-13pt}
       \resumeProjectHeading
           {\textbf{macOS OpenCore Installation on Non-supported Hardware} $|$ \\ \emph{C++, bash, ACPI, AppleScript}}{Sept 2019 -- Dec 2022}
@@ -253,7 +257,7 @@
             \resumeItem{Improved touchpad functionality within the VoodooSMBus/VoodooRMI driver repository on GitHub, elevating its performance. }
             \resumeItem{Wrote ACPI patches for optimizing hardware performance, extending battery life by 40\% while maintaining same CPU performance.}
             % \resumeItem{Implemented object-oriented programming practices such as inheritance to create different account types and databases.}
-          \resumeItemListEnd 
+          \resumeItemListEnd
     \resumeSubHeadingListEnd
 \vspace{-15pt}
 
@@ -263,9 +267,9 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Python, R, HTML/CSS, C, SQL, C++, ACPI Source Language} \\
-     \textbf{Developer Tools}{: VS Code, Huawei Cloud Platform, Xcode} \\
-     \textbf{Technologies/Frameworks}{: Linux, GitHub, Gitee, Quarto, \LaTeX, macOS Kernel Extension} \\
+     \textbf{Languages}{: Python, Lua, R, bash, HTML/CSS, JS, TS, C, SQL, C++, ACPI Source Language, AppleScript} \\
+     \textbf{Developer Tools}{: Neovim, VS Code, Huawei Cloud Platform, AWS, Azure, GCP, Xcode} \\
+     \textbf{Technologies/Frameworks}{: Linux, Tensorflow, Pytorch, Langchain, NextJS, ReactJS, GitHub, Gitee, Quarto, \LaTeX, macOS Kernel Extension} \\
     }}
  \end{itemize}
  \vspace{-16pt}
@@ -280,7 +284,7 @@
 %                 \resumeItem{Managed executive board of 5 members and ran weekly meetings to oversee progress in essential parts of the chapter.}
 %                 \resumeItem{Led chapter of 30+ members to work towards goals that improve and promote community service, academics, and unity.}
 %             \resumeItemListEnd
-        
+
     % \resumeSubHeadingListEnd
 
 
