chore: update linkedin hyprlink

--- a/main.tex
+++ b/main.tex
@@ -125,7 +125,7 @@
     {\Huge \scshape Kangheng Liu} \\ \vspace{1pt}
     1111 Arlington Blvd, Arlington, VA 22209 \\ \vspace{1pt}
     \small \raisebox{-0.1\height}\faPhone\ 202-725-1513 ~ \href{mailto:kl1099@georgetown.edu}{\raisebox{-0.2\height}\faEnvelope\  \underline{kl1099@georgetown.edu}} ~
-    \href{https://www.linkedin.com/in/kangheng-liu-7a5754295/}{\raisebox{-0.2\height}\faLinkedin\ \underline{linkedin.com/in/kangheng-liu}}  ~
+    \href{https://www.linkedin.com/in/kangheng-liu/}{\raisebox{-0.2\height}\faLinkedin\ \underline{linkedin.com/in/kangheng-liu}}  ~
     \href{https://github.com/kanghengliu}{\raisebox{-0.2\height}\faGithub\ \underline{github.com/kanghengliu}}
     \vspace{-8pt}
 \end{center}
