--- a/main.tex
+++ b/main.tex
@@ -167,9 +167,9 @@
 
     \resumeSubheading
     {Massive Data Institute, Georgetown University}{Jul. 2024 -- Current}
-    {Research Scholar}{Washington D.C., USA}
+    {Research Fellow}{Washington D.C., USA}
       \resumeItemListStart
-        \resumeItem{Implemented R and Python data extraction, computation and tabulation modules for Secure Query System - a security-focused tax data handler in collaboration with IRS SOI.}
+        \resumeItem{Implemented R and Python data extraction, computation and tabulation modules for Secure Query System - a security-focused tax data handler in collaboration with IRS SOI department and multiple clients. }
       % \resumeItem{Deployed Distributed Relational Database System GaussDB\textsuperscript{\tiny\textregistered}.}
       % \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
       % \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
@@ -220,11 +220,19 @@
     \section{Projects}
     \vspace{-5pt}
     \resumeSubHeadingListStart
-    \resumeProjectHeading
-    {\textbf{Intelligent Campus Oriented Emotion Recognition $\&$ Depression Assistance System} $|$  \\ \emph{Python, SQL, NLP}}{Mar. 2022 -- Nov. 2022}
-    % \resumeSubSubheading{This project is collaboratively operated by Lanzhou University with the School of Medicine, Lanzhou University. It combined emotion recognition analysis and big data analysis, and provided a platform for the emotional sub-health groups to
-    % communicate, assess their emotional health status and share through APP, BBS and some other applets. Moreover, it supplied
-    % health advices and services of early warning for sub-health.}{}
+      \resumeProjectHeading
+          {\textbf{Code Analysis Agent with Graph Query Language} $|$ \emph{Langchain, GraphQL, Generative AI}}{Nov 2024}
+          \resumeItemListStart
+            \resumeItem{Designed and developed a pipeline for repo code ingestion and analysis with Knowledge Graph construction with neo4j and Cypher graph query language.}
+            \resumeItem{Architected micro/macro framework for repo code semantic and logical level deep analysis.}
+            % \resumeItem{Implemented object-oriented programming practices such as inheritance to create different account types and databases.}
+          \resumeItemListEnd
+          \vspace{-13pt}
+      \resumeProjectHeading
+          {\textbf{Intelligent Campus Oriented Emotion Recognition $\&$ Depression Assistance System} $|$  \\ \emph{Python, SQL, NLP}}{Mar. 2022 -- Nov. 2022}
+          % \resumeSubSubheading{This project is collaboratively operated by Lanzhou University with the School of Medicine, Lanzhou University. It combined emotion recognition analysis and big data analysis, and provided a platform for the emotional sub-health groups to
+          % communicate, assess their emotional health status and share through APP, BBS and some other applets. Moreover, it supplied
+          % health advices and services of early warning for sub-health.}{}
           \resumeItemListStart
             \resumeItem{Gathered data (information collection, text semantic analysis and classification), cleaned, and pipelined to application back-end database.}
             \resumeItem{Wrote handler on MySQL database with SQLalchemy extension library.}
@@ -243,21 +251,21 @@
           \resumeItemListEnd
           \vspace{-13pt}
       \resumeProjectHeading
-          {\textbf{Another File Management System: Stardust} $|$ \emph{C, Python, Unity3D}}{Sept 2019}
+          {\textbf{Self-hosted homelab deployment} $|$ \\ \emph{Linux, bash, Docker}}{Nov 2023 -- Present}
           \resumeItemListStart
-            \resumeItem{Designed a classification/recommendation system for accessing recent files.}
-            \resumeItem{Implemented python GUI interface for file manager with PyQt.}
-            % \resumeItem{Implemented object-oriented programming practices such as inheritance to create different account types and databases.}
+            \resumeItem{Converted old hardware to a fully functional homelab with multimedia, nginx, vpn, virtualization, jupyter, compute and storage services.}
+            \resumeItem{Experimented with containerization, mocked AWS cloud sagemaker service architecture locally.}
+            \resumeItem{Became proficient in Debian, Arch Linux distros, and neovim with an abundance of Linux CLI tools.}
           \resumeItemListEnd
-          \vspace{-13pt}
-      \resumeProjectHeading
-          {\textbf{macOS OpenCore Installation on Non-supported Hardware} $|$ \\ \emph{C++, bash, ACPI, AppleScript}}{Sept 2019 -- Dec 2022}
-          \resumeItemListStart
-            \resumeItem{Installed macOS on spoofed non-supported HP laptop, written Kernel patches for motherboard ACPI table. }
-            \resumeItem{Improved touchpad functionality within the VoodooSMBus/VoodooRMI driver repository on GitHub, elevating its performance. }
-            \resumeItem{Wrote ACPI patches for optimizing hardware performance, extending battery life by 40\% while maintaining same CPU performance.}
-            % \resumeItem{Implemented object-oriented programming practices such as inheritance to create different account types and databases.}
-          \resumeItemListEnd
+    %   \resumeProjectHeading
+    %       {\textbf{macOS OpenCore Installation on Non-supported Hardware} $|$ \\ \emph{C++, bash, ACPI, AppleScript}}{Sept 2019 -- Dec 2022}
+    %       \resumeItemListStart
+    %         \resumeItem{Installed macOS on spoofed non-supported HP laptop, written Kernel patches for motherboard ACPI table. }
+    %         \resumeItem{Improved touchpad functionality within the VoodooSMBus/VoodooRMI driver repository on GitHub, elevating its performance. }
+    %         \resumeItem{Wrote ACPI patches for optimizing hardware performance, extending battery life by 40\% while maintaining same CPU performance.}
+    %         % \resumeItem{Implemented object-oriented programming practices such as inheritance to create different account types and databases.}
+    %       \resumeItemListEnd
+
     \resumeSubHeadingListEnd
 \vspace{-15pt}
 
@@ -267,9 +275,9 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Python, Lua, R, bash, HTML/CSS, JS, TS, C, SQL, C++, ACPI Source Language, AppleScript} \\
-     \textbf{Developer Tools}{: Neovim, VS Code, Huawei Cloud Platform, AWS, Azure, GCP, Xcode} \\
-     \textbf{Technologies/Frameworks}{: Linux, Tensorflow, Pytorch, Langchain, NextJS, ReactJS, GitHub, Gitee, Quarto, \LaTeX, macOS Kernel Extension} \\
+     \textbf{Languages}{: Python, Lua, R, bash/fish, HTML/CSS, JS, TS, SQL} \\
+     \textbf{Developer Tools}{: Neovim, VS Code, Huawei Cloud Platform, AWS, Azure, GCP bigquery, Xcode, nginx} \\
+     \textbf{Technologies/Frameworks}{: Linux, Tensorflow, Pytorch, Langchain, MCP, NextJS, ReactJS, GitHub, Gitee, Quarto, \LaTeX} \\
     }}
  \end{itemize}
  \vspace{-16pt}
